src/objects/CH_Design_Element__c.object
<CustomObject>
    <description>This object contains the software builds that are needed for Case Handling. Within Nokia build are called design elements</description>
    <fields>
        <fullName>CH_Description__c</fullName>
        <description>The description of the build</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The description of the build</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CH_Last_Updated__c</fullName>
        <description>The date time that the build was last updated in the source system</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date time that the build was last updated in the source system</inlineHelpText>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_Lifecyclestatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lifecyclestatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_NSNLegacyCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>NSNLegacyCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_NSNLegacyNCMCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>NSNLegacyNCMCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_NSN_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSN Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Product_ReleaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Release</label>
        <referenceTo>CH_ProductRelease__c</referenceTo>
        <relationshipLabel>Design Elements (Product Release)</relationshipLabel>
        <relationshipName>CH_Design_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_SW_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Module</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Design Elements (SW Module)</relationshipLabel>
        <relationshipName>Design_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Valid__c</fullName>
        <formula>( CH_Lifecyclestatus__c &lt;&gt; &apos;Obsolete&apos; || CH_Lifecyclestatus__c &lt;&gt; &apos;Rejected&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CH Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>Design Element</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CH_NSNLegacyCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Design Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Design Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>